authorization added to swagger
