# routes/user.js
@@ -3,7 +3,7 @@ const router = express.Router()
 const userControllers = require('../controllers/user.js')
 
 router.post('/register', userControllers.register)
-router.get('/login', userControllers.login)
+router.post('/login', userControllers.login)
 router.get('/users', userControllers.getUsers)
 
 module.exports = router
